@@ -2,6 +2,7 @@ v3.3:
   - Tomo metadata viewer increase contrast when left clicking on the preview image.
   - Import tilt series movies using a pattern instead of from mdoc files was improved and admits brackets [] in the
     basename of the files.
+  - Import tilt series from mdoc now admits numeric base names or base names beginning by a numeric character
   - New config var: NAPARI_ENV_ACTIVATION, used by other plugins. Napari binary installation is centralized here.
 
   Developers:
